Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6567414.out
T6567414.java:8:3: compiler.err.unreported.exception.need.to.catch.or.throw: java.lang.Exception
1 error
